--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,10 @@
   font-family: "Poppins", sans-serif;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   background: #080808;
   color: #fff;
@@ -396,6 +400,7 @@ nav .fas {
     height: 100vh;
     padding-top: 50px;
     z-index: 2;
+    transition: right 0.5s;
   }
 
   nav ul li {
@@ -408,5 +413,36 @@ nav .fas {
     top: 25px;
     left: 25px;
     cursor: pointer;
+  }
+
+  .sub-title {
+    font-size: 40px;
+  }
+
+  .about-col-1,
+  .about-col-2 {
+    flex-basis: 100%;
+  }
+
+  .about-col-1 {
+    margin-bottom: 30px;
+  }
+
+  .about-col-2 {
+    font-size: 14px;
+    margin-right: 20px;
+  }
+
+  .tab-links {
+    font-size: 16px;
+  }
+
+  .contact-left,
+  .contact-right {
+    flex-basis: 100%;
+  }
+
+  .copyright {
+    font-size: 14px;
   }
 }
