--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -389,7 +389,7 @@ nav .fas {
 
 @media only screen and (max-width: 600px) {
   #header {
-    background-image: url(../img/phone-background.png);
+    background-image: url(../img/phone-background2.png);
   }
 
   .header-text {
