--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -389,11 +389,11 @@ nav .fas {
 
 @media only screen and (max-width: 600px) {
   #header {
-    background-image: url(../img/phone-background2.png);
+    background-image: url(../img/phone-background.png);
   }
 
   .header-text {
-    margin-top: 50%;
+    margin-top: 100%;
     font-size: 14px;
   }
 
